[package]
name = "reputation-contract"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"

# OpenZeppelin Stellar Contracts - Security and standard implementations
# Note: These are optional and can be uncommented when needed
# To use specific OpenZeppelin packages, uncomment the ones you need:
# openzeppelin-access = { git = "https://github.com/OpenZeppelin/stellar-contracts", branch = "main" }
# openzeppelin-token = { git = "https://github.com/OpenZeppelin/stellar-contracts", branch = "main" }
# openzeppelin-utils = { git = "https://github.com/OpenZeppelin/stellar-contracts", branch = "main" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
# OpenZeppelin Testing Helpers (optional)
# soroban-test-helpers = { git = "https://github.com/OpenZeppelin/soroban-helpers", branch = "main" }

